# NASimEmu

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_vagrant.sh
docs/: EMULATION.md  SCENARIOS.md  SERVICES.md
scenarios/: README.md  corp.v2.yaml  entry_dmz_one_subnet.v2.yaml  entry_dmz_three_subnets.v2.yaml  entry_dmz_two_subnets.v2.yaml  entry_user_three_subnets.v2.yaml  md_entry_dmz_one_subnet.v2.yaml  md_entry_dmz_three_subnets.v2.yaml  md_entry_dmz_two_subnets.v2.yaml  md_entry_user_three_subnets.v2.yaml  sm_entry_dmz_one_subnet.v2.yaml  sm_entry_dmz_two_subnets.v2.yaml  sm_entry_user_three_subnets.v2.yaml  uni.v2.yaml  visualize_scenario.py
src/nasimemu/: __init__.py  env.py  env_emu.py  env_utils.py  msf_interface.py  vagrant_gen.py
src/nasimemu/nasim/: README.txt  __init__.py  demo.py
src/nasimemu/nasim/agents/: bruteforce_agent.py  dqn_agent.py  keyboard_agent.py  ql_agent.py  ql_replay_agent.py  random_agent.py
src/nasimemu/nasim/envs/: action.py  environment.py  gym_env.py  host_vector.py  network.py  observation.py
src/nasimemu/nasim/scenarios/: __init__.py  generator.py  loader.py  loader_v2.py  scenario.py
src/nasimemu/nasim/scenarios/benchmark/: generated.py  small.yaml
src/nasimemu/nasim/scripts/: describe_scenarios.py  run_dqn_policy.py  run_random_benchmarks.py  train_dqn.py  visualize_graph.py
src/nasimemu/pymetasploit3/: README.txt  msfconsole.py  msfrpc.py  utils.py
src/nasimemu/pymetasploit3/scripts/: pymsfconsole.py  pymsfrpc.py
vagrant/attacker/: bootstrap.sh  http_dir.txt
vagrant/router/: bootstrap-after-firewall.rsc  bootstrap.rsc
