[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nasimemu"
version = "0.9.0"
authors = [
    {name="Jaromir Janisch", email="author@jaromiru.com"}
]
description = "Gym based environment for training offensive RL agents in simulated and emulated computer networks."
readme = "README.md"
dependencies = [
    "gym == 0.21.0",
    "networkx", # For nasim render
    "prettytable", # For nasim render
    "matplotlib", # For nasim render (suppress warning)
    "pyyaml", # For nasim
    "msgpack", # For pymetasploit3
    "requests", # For pymetasploit3
    "retry", # For pymetasploit3
    "pillow", # For nasim_problem rendering
    "plotly", # For nasim_problem debug
    "scipy", # For networkx
    # "pygame", # For nasim play
    # "kaleido", # Image with plotly for nasim play
]